--- a/src/UPS/VCGBundle/Resources/sass/layout/_header.scss
+++ b/src/UPS/VCGBundle/Resources/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 $header-height--small: 16rem;
 $header-height--medium: 26rem;
 $header-height--large: 28rem;
-$header-height--wide: 33rem;
+$header-height--wide: 30rem;
 
 $header-height-short--small: 10rem;
 $header-height-short--medium: 18rem;
